src/test/ui/error-codes/E0600.stderr
error[E0600]: cannot apply unary operator `!` to type `&'static str`
  --> $DIR/E0600.rs:12:5
   |
LL |     !"a"; //~ ERROR E0600
   |     ^^^^

error: aborting due to previous error

